--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple To-Do List using localStorage - TheToDoList</title>
-    <link rel="stylesheet" href="design.css?version=1.0.16">
+    <link rel="stylesheet" href="design.css?version=1.0.17">
 </head>
     <body class="padding-0 margin-0 align-def font-size-def" style="font-family: 'Courier New', monospace; color:#333333; background-color: #8DA4B5;">
         <div class="padding-def" style="background-color: #333333;">
             <details class="padding-def user-select-0" style="color:#ffffff;">
                 <summary class="cursor"></summary>
+                  <p><a href="gen/index.html">Generator</a></p>
                   <p id="backup" class="hover cursor user-select-0">Backup</p>
                   <p class="hover"><input type="file" id="restore" accept="*.json"></p>
             </details>
@@ -19,6 +20,6 @@
         <div id="main" class="flex-def flex-wrap" style="background-color: #8DA4B5;"></div>
         <div id="new"></div>
         <p><a href="https://github.com/lobossl/todo" style="color:#ffffff;" class="font-size-small">TheTodoList.eu</a></p>
-     <script src="app.js?version=1.0.16"></script>
+     <script src="app.js?version=1.0.17"></script>
     </body>
 </html>
