--- a/gen/index.html
+++ b/gen/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple To-Do List using localStorage - TheToDoList</title>
-    <link rel="stylesheet" href="design.css?version=1.0.17">
+    <title>Password Generator</title>
 </head>
-    <body class="padding-0 margin-0 align-def font-size-def" style="font-family: 'Courier New', monospace; color:#333333; background-color: #8DA4B5;">
-     <p><button id="btn">Generate</button></p>
+    <body>
+     <p><button id="btn">Generate Password</button></p>
      <p id="val"></p>
-     <script src="generator.js?v=1.0"></script>
+     <script src="generator.js?v=1.2"></script>
     </body>
 </html>
