--- a/gen/index.html
+++ b/gen/index.html
@@ -8,6 +8,7 @@
     <body>
      <p><button id="btn">Generate Password</button></p>
      <p id="val"></p>
-     <script src="generator.js?v=1.2"></script>
+     <p id="msg"></p>
+     <script src="generator.js?v=1.3"></script>
     </body>
 </html>
